Fix problem with code wrapping.

--- a/src/assets/scss/_post.scss
+++ b/src/assets/scss/_post.scss
@@ -21,6 +21,7 @@
 
 .post pre.highlight {
   padding: 0 1rem;
+  white-space:  pre-wrap;
 }
 
 .post code.highlighter-rouge {
